--- a/CryptoFolio/CryptoFolio.iOS/packages.config
+++ b/CryptoFolio/CryptoFolio.iOS/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="LiteDB" version="4.0.0" targetFramework="xamarinios10" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Reflection.TypeExtensions" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Threading.Thread" version="4.0.0" targetFramework="xamarinios10" />
   <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.5.0.121934" targetFramework="xamarinios10" />
 </packages>
