--- a/CryptoFolio/CryptoFolio.Android/CryptoFolio.Android.csproj
+++ b/CryptoFolio/CryptoFolio.Android/CryptoFolio.Android.csproj
@@ -465,6 +465,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\Drawable\zcash.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\Drawable\app_splashscreen.png" />
+  </ItemGroup>
   <Import Project="..\CryptoFolio\CryptoFolio.projitems" Label="Shared" Condition="Exists('..\CryptoFolio\CryptoFolio.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Android.Support.Annotations.26.1.0.1\build\MonoAndroid80\Xamarin.Android.Support.Annotations.targets" Condition="Exists('..\..\packages\Xamarin.Android.Support.Annotations.26.1.0.1\build\MonoAndroid80\Xamarin.Android.Support.Annotations.targets')" />
